# voice-lab

./: .gitignore  HANDOFF.md  TASK.md  config.yaml  feedback_from_transcript.py  feedback_keywords.py  pyproject.toml  run.py  run_agent.py  run_interview.py  run_phone.py  run_raw.py  start-servers.ps1  stop-servers.ps1  test_pipeline.py  test_piper.py  voice-phone.service
pipeline/: agent_gate.py  agent_state.py  call_logger.py  dispatch.py  kokoro_tts.py  stt_service.py  tts_service.py
servers/: stt_server.py  tts_server.py
tests/: test_agent_gate.py  test_agent_state.py  test_dispatch.py
